lib_LTLIBRARIES = libWARP-Flux.la

libWARP_Flux_la_SOURCES = \
	Array.cc Buffer.cc BufferDelegate.cc Channel.cc ChannelDelegate.cc \
	ChannelSet.cc Diagnostics.cc EventSource.cc IPv4.cc Listener.cc \
	Object.cc Pipe.cc RunLoop.cc RunLoopDelegate.cc Socket.cc Task.cc Tool.cc \
	SubTask.cc

libWARP_Flux_la_LDFLAGS = -no-undefined -avoid-version